--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,14 +1,13 @@
-#portfolio{
-  padding: 30px 0px;
+ #portfolio{
+  padding: 50px 0px;
   color: #ababab;
 }
 .container{
   padding: 10px 10%;
-
 }
 .work-list{
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
   grid-gap: 40px;
   margin-top: 50px;
 }
@@ -18,8 +17,8 @@
   overflow: hidden;
   
 }
-.work.img{
-  width: auto;
+.work img{
+  width: 100%;
   border-radius: 10px;
   display: block;
   transition: transform 0.5s;
