--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,35 +1,45 @@
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(background.pn);
+    background-image: url(./images/background.png);
     background-size: cover;
     background-position: center;
   }
   
   .container {
-    padding: 10px 10%;
+    padding: 10px 8%;
   }
   
   nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    backdrop-filter: blur(5px) brightness(0.8);
+    background-color: rgba(0, 0, 0, 0.2);
   }
   
   .logo {
-    width: 140px;
+    width: 50px;
+    margin: 15px 8%;
   }
-  
+  nav ul{
+    margin-right: 2%;
+  }
   nav ul li {
     display: inline-block;
     justify-content: space-between;
     list-style: none;
-    margin: 10px 20px;
+    margin: 10px 30px;
   }
   
   nav ul li a {
-    font-size: 28px;
+    font-size: 23px;
     color: #fff;
     text-decoration: none;
     position: relative;
@@ -39,7 +49,7 @@
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #687857;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -51,7 +61,8 @@
   }
   
   .header-text {
-    margin-top: 200px;
+    margin-top: 210px;
+    margin-bottom: 30px;
     font-size: 36px;
     color: #fff;
   }
@@ -63,6 +74,6 @@
   }
   
   .header-text h1 span {
-    color: #ff004f;
+    color: #687857;
   }
   
