--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,10 @@
     scroll-behavior: smooth;
   }
   body{
-    background-color: #000000;
+    width: 100%;
+    height: 100vh;
+    background-image: url(./images/background.png);
+    background-color: rgba(0, 0, 0, 0.5);
+    background-size: cover;
+    background-position: center;
   }
