--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,9 +1,9 @@
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(./images/background.png);
+    /* background-image: url(./images/background.png);
     background-size: cover;
-    background-position: center;
+    background-position: center; */
   }
   
   .container {
@@ -15,27 +15,31 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 9%;
     z-index: 999;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(5px) brightness(0.8);
-    background-color: rgba(0, 0, 0, 0.2);
+    
   }
   
   .logo {
-    width: 50px;
-    margin: 15px 8%;
+    width: 38px;
+    margin: 10px 20px;
+    margin-bottom: 20%;
   }
   nav ul{
     margin-right: 2%;
+    padding-bottom: 19.2%;
   }
   nav ul li {
     display: inline-block;
     justify-content: space-between;
     list-style: none;
-    margin: 10px 30px;
+    margin-right: 30px;
   }
   
   nav ul li a {
