--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,13 @@
     color: #fff;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    
   }
   body{
     width: 100%;
     height: 100vh;
-    background-image: url(./images/background.png);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-image: url(./images/background3.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
-    background-position: center;
   }
