--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   body{
     width: 100%;
     height: 100vh;
-    background-image: url(./images/background3.png);
+    background-image: url(./images/Home.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
